--- a/index.html
+++ b/index.html
@@ -42,14 +42,22 @@
                             </li>
                             <li class="list--item" id="item2">
                                 <div class="list--item-black">
-                                    <a href="">Pages</a><a href="">+</a>
+                                    <a href="#5">Pages</a><a href="">+</a>
                                 </div>
                                 <ul class="drop__menu">
                                     <li>Team</li>
                                     <li>Team Single</li>
                                     <li>Faq</li>
                                     <li>Element</li>
-                                    <li>Coming Soon</li>
+                                    <li class="dropNeo" id="item7">
+                                        <h5 href="">Coming Soon</h5>
+                                        <ul class="drop__menu2">
+                                            <li>Team</li>
+                                            <li>Team Single</li>
+                                            <li>Faq</li>
+                                            <li>Element</li>
+                                        </ul>
+                                    </li>
                                     <li>Error 404</li>
                                 </ul>
                             </li>
@@ -66,7 +74,15 @@
                                     <a href="">Services</a><a href="">+</a></div>
                                 <ul class="drop__menu">
                                     <li>Services 1</li>
-                                    <li>Services 2</li>
+                                    <li class="dropNeo" id="item8">
+                                        <h5 href="">Services 2</h5>
+                                        <ul class="drop__menu2">
+                                            <li>Team</li>
+                                            <li>Team Single</li>
+                                            <li>Faq</li>
+                                            <li>Element</li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="list--item" id="item5">
@@ -554,25 +570,25 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-12">
                             <div class="count__component">
-                                <h1>2304</h1>
+                                <h1 id="count1">2304</h1>
                                 <p>Project Done</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-12">
                             <div class="count__component">
-                                <h1>2304</h1>
+                                <h1 id="count2">2304</h1>
                                 <p>Project Done</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-12">
                             <div class="count__component">
-                                <h1>2304</h1>
+                                <h1 id="count3">2304</h1>
                                 <p>Project Done</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-12">
                             <div class="count__component">
-                                <h1>2304</h1>
+                                <h1 id="count4">2304</h1>
                                 <p>Project Done</p>
                             </div>
                         </div>
@@ -775,8 +791,7 @@
    -->
     <script src="./assets/common/main.js"></script>
     <script src="./assets/common/menu.js"></script>
-    <script>
-    </script>
+    <script src="./assets/common/count.js"></script>
 
 </body>
 
