--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
     <div class="wrapper">
         <!-- start header -->
+        <div class="" id="topcontent"></div>
         <div class="header">
             <div class="container-fluid">
                 <div class="container">
@@ -34,7 +35,7 @@
                         <ul class="menu__list">
                             <li class="list--item" id="item1">
                                 <div class="list--item-black">
-                                    <a href="">Home
+                                    <a href="index.html">Home
                                         <img src="https://img.icons8.com/color/30/000000/ellipsis.png" />
                                     </a>
                                     <a href="">+</a>
@@ -63,7 +64,7 @@
                             </li>
                             <li class="list--item" id="item3">
                                 <div class="list--item-black">
-                                    <a href="">Abouts Us</a><a href="">+</a></div>
+                                    <a href="about.html">Abouts Us</a><a href="">+</a></div>
                                 <ul class="drop__menu">
                                     <li>About Us 1</li>
                                     <li>About Us 2</li>
@@ -780,6 +781,10 @@
             </div>
         </div>
         <!-- end footer -->
+
+        <div class="scroll--top">
+            <a href="#topcontent"><img src="./assets/img/scroll-to-top-icon-35.jpg" width="50px" alt=""></a>
+        </div>
     </div>
 
     <script src="./assets/common/jquery-3.4.1.js"></script>
