--- a/about.html
+++ b/about.html
@@ -23,7 +23,10 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <div id="wrapper" class="wrapper">
+        <div class="wrapper--loading">
+            <img src="./assets/img/load.gif" width="10%" alt="">
+        </div>
         <div class="" id="topcontent"></div>
         <div class="header">
             <div class="container-fluid">
@@ -88,7 +91,7 @@
                             </li>
                             <li class="list--item" id="item5">
                                 <div class="list--item-black">
-                                    <a href="">Blogs</a><a href="">+</a></div>
+                                    <a href="aboutUs.html">Blogs</a><a href="">+</a></div>
                                 <ul class="drop__menu">
                                     <li>Blog Grid 2</li>
                                     <li>Blog Left Sidebar</li>
@@ -530,13 +533,11 @@
     <!-- start footer -->
 
     <!-- end footer -->
+    <script src="./assets/common/loading.js"></script>
     <script src="./assets/common/jquery-3.4.1.js"></script>
     <script src="./assets/common/owl.carousel.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-   -->
+
+
     <script src="./assets/common/main.js"></script>
     <script src="./assets/common/menu.js"></script>
     <script src="./assets/common/count.js"></script>
