--- a/single.html
+++ b/single.html
@@ -16,14 +16,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:600&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cBlogsdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/fontawesome-free-5.13.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/single.css">
 </head>
 
 <body>
-    <div class="wrapper">
+    <div id="wrapper" class="wrapper">
+        <div class="wrapper--loading">
+            <img src="./assets/img/load.gif" width="10%" alt="">
+        </div>
         <div class="" id="topcontent"></div>
         <div class="header">
             <div class="container-fluid">
@@ -88,7 +91,7 @@
                             </li>
                             <li class="list--item" id="item5">
                                 <div class="list--item-black">
-                                    <a href="">Blogs</a><a href="">+</a></div>
+                                    <a href="aboutUs.html">Blogs</a><a href="">+</a></div>
                                 <ul class="drop__menu">
                                     <li>Blog Grid 2</li>
                                     <li>Blog Left Sidebar</li>
@@ -449,11 +452,7 @@
 
     <script src="./assets/common/jquery-3.4.1.js"></script>
     <script src="./assets/common/owl.carousel.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-   -->
+    <script src="./assets/common/loading.js"></script>
     <script src="./assets/common/main.js"></script>
     <script src="./assets/common/menu.js"></script>
     <script src="./assets/common/count.js"></script>
