--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./assets/css/fontawesome-free-5.13.0-web/css/all.min.css">
-
+    <link rel="stylesheet" href="./assets/css/owl.carousel.css">
 </head>
 
 <body>
