--- a/single.html
+++ b/single.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/fontawesome-free-5.13.0-web/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/single.css">
+    <link rel="stylesheet" href="./assets/css/owl.carousel.css">
 </head>
 
 <body>
